--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,3 @@
-/* Reset */
 :root {
   --cor: #b80000;
 }
@@ -15,36 +14,131 @@
     color: #333;
   }
   
-  .header {
-    background-color: var(--cor);
-    padding: 10px 20px;
-  }
-  
-  .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #fff;
-  }
-  
-  .header .logo {
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  .header .menu {
-    list-style: none;
-    display: flex;
-  }
-  
-  .header .menu li {
-    margin-right: 15px;
-  }
-  
-  .header .menu li a {
-    color: #fff;
-    text-decoration: none;
-  }
+.header {
+  background-color: var(--cor);
+  padding: 10px 20px;
+  width: 100%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+
+
+.header .logo {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+
+.header .menu {
+  list-style: none;
+  display: flex;
+}
+
+.header .menu li {
+  margin-right: 15px;
+}
+
+.header .menu li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+
+.header-fixed {
+  background-color: #333;
+  padding: 10px 20px;
+  width: 100%;
+  position: fixed; 
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  transform: translateY(-100%);
+  transition: transform 0.3s ease-in-out; 
+}
+
+.header {
+  background-color: var(--cor);
+  padding: 10px 20px;
+  width: 100%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+
+.header .logo {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.header .menu {
+  list-style: none;
+  display: flex;
+}
+
+.header .menu li {
+  margin-right: 15px;
+}
+
+.header .menu li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.header-fixed {
+  background-color: var(--cor); 
+  padding: 10px 20px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  transform: translateY(-100%); 
+  transition: transform 0.3s ease-in-out;
+}
+.header-fixed .logo {
+  font-size: 24px;
+  font-weight: bold;
+}
+.header-fixed .header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-fixed .menu {
+  list-style: none;
+  display: flex;
+}
+
+.header-fixed .menu li {
+  margin-right: 15px;
+}
+
+.header-fixed .menu li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+
+
+.content {
+  padding: 20px;
+  height: 2000px; 
+}
+
   
   .news-container {
     max-width: 700px;
@@ -94,4 +188,71 @@
     max-width: 100%; 
     height: auto; 
   }
+  #search-form {
+    display: flex;
+    align-items: center;
+  }
   
+  .search-field {
+    padding: 10px;
+    font-size: 16px;
+    width: 250px;
+    border: 0px solid #ccc;
+    border-radius: 4px;
+    background-color: #8f0101;
+    color: white;
+    transition: background-color 0.3s ease; 
+  }
+  #search-input::placeholder {
+    color: white;
+  }
+  
+
+  #search-input.focused::placeholder {
+    color: black;
+  }
+  footer {
+    margin: 0 auto; 
+    background-color: #f9f9f9;
+    padding: 20px 40px;
+    border-top: 1px solid #e0e0e0;
+    font-family: Arial, sans-serif;
+    color: #333;
+  }
+  .footer-container{
+    max-width: 700px;
+    margin: 0 auto;
+  }
+  
+  .footer-news {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 60%;
+  }
+  
+  .footer-item {
+    border-top: 1px solid rgb(211, 211, 211);
+    margin-bottom: 40px;
+    padding-top: 40px;
+    display: flex; 
+    align-items: center; 
+    gap: 15px;      
+  }
+
+  .footer-image {
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    margin-right: 10px;
+    border-radius: 4px;
+  }
+  .footer-text h4 {
+    font-size: 24px; 
+    color: var(--cor);
+    margin: 0;
+  }
+  .footer-text p {
+    font-size: 14px; 
+    color: #666;
+    margin: 0;
+  }
