--- a/estilo.css
+++ b/estilo.css
@@ -2,17 +2,17 @@
   --cor: #b80000;
 }
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.6;
-    background-color: #f4f4f4;
-    color: #333;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.6;
+  background-color: #f9f9f9;
+  color: #333;
+}
   
 .header {
   background-color: var(--cor);
@@ -32,6 +32,7 @@
 .header .logo {
   font-size: 24px;
   font-weight: bold;
+  width: 100px;
 }
 
 
@@ -83,6 +84,7 @@
 }
 
 .header .menu {
+  justify-content: space-between;
   list-style: none;
   display: flex;
 }
@@ -140,119 +142,119 @@
 }
 
   
-  .news-container {
-    max-width: 700px;
-    margin: 20px auto;
-    padding: 20px;
-  }
-  
-  .news-title {
-    font-size: 28px;
-    margin-bottom: 10px;
-  }
-  
-  .news-info {
-    font-size: 14px;
-    color: #555;
-    margin-bottom: 20px;
-    
-  }
-  
-  .news-content {
-    margin-bottom: 15px;
-    margin-top: 40px;
-  }
-  
-  .highlight {
-    color: var(--cor);
-    font-weight: bold;
-  }
-  
-  .footer {
-    text-align: center;
-    background: #333;
-    color: #fff;
-    padding: 10px 0;
-    margin-top: 20px;
-  }
-  .news-container ul {
-    margin: 0;
-    padding-left: 20px;
-    list-style-position: inside; 
-  }
-  
-  .news-container li {
-    margin-bottom: 10px;
-  }
-  .news-image {
-    max-width: 100%; 
-    height: auto; 
-  }
-  #search-form {
-    display: flex;
-    align-items: center;
-  }
-  
-  .search-field {
-    padding: 10px;
-    font-size: 16px;
-    width: 250px;
-    border: 0px solid #ccc;
-    border-radius: 4px;
-    background-color: #8f0101;
-    color: white;
-    transition: background-color 0.3s ease; 
-  }
-  #search-input::placeholder {
-    color: white;
-  }
-  
+.news-container {
+  max-width: 700px;
+  margin: 20px auto;
+  padding: 20px;
+}
 
-  #search-input.focused::placeholder {
-    color: black;
-  }
-  footer {
-    margin: 0 auto; 
-    background-color: #f9f9f9;
-    padding: 20px 40px;
-    border-top: 1px solid #e0e0e0;
-    font-family: Arial, sans-serif;
-    color: #333;
-  }
-  .footer-container{
-    max-width: 700px;
-    margin: 0 auto;
-  }
-  
-  .footer-news {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 60%;
-  }
-  
-  .footer-item {
-    border-top: 1px solid rgb(211, 211, 211);
-    margin-bottom: 40px;
-    padding-top: 40px;
-    display: flex; 
-    align-items: center; 
-    gap: 15px;      
-  }
+.news-title {
+  font-size: 28px;
+  margin-bottom: 10px;
+}
 
-  .footer-image {
-    width: 200px;
-    height: 150px;
-    object-fit: cover;
-    margin-right: 10px;
-    border-radius: 4px;
-  }
-  .footer-text h4 {
-    font-size: 24px; 
-    color: var(--cor);
-    margin: 0;
-  }
-  .footer-text p {
-    font-size: 14px; 
-    color: #666;
-    margin: 0;
-  }
+.news-info {
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 20px;
+  
+}
+
+.news-content {
+  margin-bottom: 15px;
+  margin-top: 40px;
+}
+
+.highlight {
+  color: var(--cor);
+  font-weight: bold;
+}
+
+.footer {
+  text-align: center;
+  background: #333;
+  color: #fff;
+  padding: 10px 0;
+  margin-top: 20px;
+}
+.news-container ul {
+  margin: 0;
+  padding-left: 20px;
+  list-style-position: inside; 
+}
+
+.news-container li {
+  margin-bottom: 10px;
+}
+.news-image {
+  max-width: 100%; 
+  height: auto; 
+}
+#search-form {
+  display: flex;
+  align-items: center;
+}
+
+.search-field {
+  padding: 10px;
+  font-size: 10px;
+  width: 180px;
+  border: 0px solid #ccc;
+  border-radius: 4px;
+  background-color: #8f0101;
+  color: white;
+  transition: background-color 0.3s ease; 
+}
+#search-input::placeholder {
+  color: white;
+}
+
+
+#search-input.focused::placeholder {
+  color: black;
+}
+footer {
+  margin: 0 auto; 
+  background-color: #f4f4f4;
+  padding: 20px 40px;
+  border-top: 1px solid #e0e0e0;
+  font-family: Arial, sans-serif;
+  color: #333;
+}
+.footer-container{
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.footer-news {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 60%;
+}
+
+.footer-item {
+  border-top: 1px solid rgb(211, 211, 211);
+  margin-bottom: 40px;
+  padding-top: 40px;
+  display: flex; 
+  align-items: center; 
+  gap: 15px;      
+}
+
+.footer-image {
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+  margin-right: 10px;
+  border-radius: 4px;
+}
+.footer-text h4 {
+  font-size: 24px; 
+  color: var(--cor);
+  margin: 0;
+}
+.footer-text p {
+  font-size: 14px; 
+  color: #666;
+  margin: 0;
+}
