--- a/estilo.css
+++ b/estilo.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Arial', sans-serif;
   line-height: 1.6;
   background-color: #f9f9f9;
   color: #333;
@@ -20,16 +20,14 @@ body {
   width: 100%;
   transition: transform 0.3s ease-in-out;
 }
-
 .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: #fff;
 }
-
-
 .header .logo {
+  
   font-size: 24px;
   font-weight: bold;
   width: 100px;
@@ -49,55 +47,26 @@ body {
   color: #fff;
   text-decoration: none;
 }
-
-
-.header-fixed {
-  background-color: #333;
-  padding: 10px 20px;
-  width: 100%;
-  position: fixed; 
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000;
-  transform: translateY(-100%);
-  transition: transform 0.3s ease-in-out; 
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
 }
 
-.header {
-  background-color: var(--cor);
-  padding: 10px 20px;
-  width: 100%;
-  transition: transform 0.3s ease-in-out;
+.menu-toggle span {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 2px;
+  transition: all 0.3s;
 }
 
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #fff;
-}
 
-.header .logo {
-  font-size: 24px;
-  font-weight: bold;
-}
-
-.header .menu {
-  justify-content: space-between;
+.menu {
   list-style: none;
   display: flex;
 }
-
-.header .menu li {
-  margin-right: 15px;
-}
-
-.header .menu li a {
-  color: #fff;
-  text-decoration: none;
-}
-
 .header-fixed {
   background-color: var(--cor); 
   padding: 10px 20px;
@@ -113,6 +82,7 @@ body {
 .header-fixed .logo {
   font-size: 24px;
   font-weight: bold;
+  width: 100px;
 }
 .header-fixed .header-container {
   display: flex;
@@ -134,8 +104,6 @@ body {
   text-decoration: none;
 }
 
-
-
 .content {
   padding: 20px;
   height: 2000px; 
@@ -149,6 +117,7 @@ body {
 }
 
 .news-title {
+  line-height: 1.2;
   font-size: 28px;
   margin-bottom: 10px;
 }
@@ -170,13 +139,6 @@ body {
   font-weight: bold;
 }
 
-.footer {
-  text-align: center;
-  background: #333;
-  color: #fff;
-  padding: 10px 0;
-  margin-top: 20px;
-}
 .news-container ul {
   margin: 0;
   padding-left: 20px;
